[tool.poetry]
name = "api-local"
version = "0.1.0"
description = "Local FastAPI backend for PolySynergy"
authors = ["Dion Snoeijen"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
polysynergy_nodes = { path = "../nodes", develop = true }
alembic = "^1.16.2"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"