[tool.poetry]
name = "api-local"
version = "0.1.0"
description = "Local FastAPI backend for PolySynergy"
authors = ["Dion Snoeijen"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
polysynergy_nodes = { path = "../nodes", develop = true }
polysynergy_node_runner = { path = "../node_runner", develop = true }
alembic = "^1.16.2"
boto3 = "^1.39.4"
jinja2 = "^3.1.6"
psycopg2-binary = "^2.9.10"
cachetools = "^6.1.0"
redis = "^6.2.0"
typer = {extras = ["all"], version = "^0.16.0"}

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.35.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"